--- a/src/components/NextVideos/NextVideos.scss
+++ b/src/components/NextVideos/NextVideos.scss
@@ -1,25 +1,33 @@
 @use "../../styles/index" as *;
 
 .videos {
-  width: 100vw;
   @include flex-column;
-  
-  
+   padding: 1rem 1rem 0 1rem ;
 
+@include desktop 
+{
+  border-left: .0625rem  solid $primary-silver;
+}
+  &__heading {
+    color: $primary-silver;
+    font-weight: 500;
+  }
   &__item {
-    width: 100vw;
     @include flex-row;
-
+    margin: 1.5rem 0 1.5rem 0;
   }
   &__media {
-    width: 30%;
-    border-radius: 1rem;
+    width: 35%;
+    border-radius: 0.25rem;
     margin-right: 1.5rem;
   }
 
   &__info {
-  
     @include flex-column;
     justify-content: space-between;
+    padding:  .5rem 0;
+  }
+  &__title {
+    @include page-header-mobile;
   }
 }
