--- a/src/components/Video/Video.scss
+++ b/src/components/Video/Video.scss
@@ -1,17 +1,34 @@
 @use "../../styles/index" as *;
 
-.video {
+.video__player {
+  display: flex;
+}
+
+.video__media {
+  display: flex;
   width: 100vw;
 
-  &__media {
-    width: 100%;
-    
+  @include tablet
+  {
+    display: flex;
+    width: 80vw;
+   justify-content: center;
+
   }
 
-  &__container {
-    width: 100%;
+  @include desktop
+  {
     display: flex;
     justify-content: center;
-    background-color:$secondary-brainflix-black;
+    width: 50vw;
   }
+
+
+}
+.video__container {
+  display: flex;
+  width: 100vw;
+ 
+  justify-content: center;
+  background-color: $secondary-brainflix-black;
 }
