more styling added

--- a/src/components/CommentList/CommentList.scss
+++ b/src/components/CommentList/CommentList.scss
@@ -39,10 +39,12 @@
   }
 
   &__avatar {
-    width: 40v;
+    width: 50px;
+    height: 50px;
+
     background-color: $secondary-mercury;
     border-radius: 50%;
-    margin: 1.2vw;
+    margin: 2vw;
   }
 
   &__metadata {
