--- a/src/components/CommentForm/CommentForm.scss
+++ b/src/components/CommentForm/CommentForm.scss
@@ -5,14 +5,12 @@
   background-color: $primary-white;
   @include flex-column;
 
-  @include tablet
-  {
-    @include flex-row
+  @include tablet {
+    @include flex-row;
   }
 
-  @include desktop
-  {
-    @include flex-row
+  @include desktop {
+    @include flex-row;
   }
 
   &__title {
@@ -26,20 +24,17 @@
   &__form {
     @include flex-column;
     gap: 1rem;
-    align-items: flex-start;
     width: 100%;
 
     @include desktop {
       @include flex-row;
       align-items: flex-end;
-
     }
 
     @include tablet {
-        @include flex-row;
-        align-items: flex-end;
-
-      }
+      @include flex-row;
+      align-items: flex-end;
+    }
     &__details {
       @include flex-column;
       width: 100%;
@@ -58,23 +53,22 @@
 
     &__textarea {
       width: 100%;
+      height: 100px;
       border: 1px solid $secondary-mercury;
       border-radius: 0.25rem;
       font-size: 1rem;
-
+     
       @include tablet {
         width: 100%;
+        height: auto;
       }
       @include desktop {
         width: 100%;
+        height: auto;
+
       }
     }
-
-
-    &__content
-    {
-       @include flex-column;
-    }
+  
   }
 
   &__comment {
@@ -89,18 +83,36 @@
     height: 3rem;
     padding: 0 4rem 0 4rem;
     margin: 0;
-    width: 100%;
+    width: 85%;
     color: $primary-white;
+    align-self: flex-end;
 
     &:hover {
       background-color: $secondary-brainflix-blue;
     }
 
     @include tablet {
-      width: 40%;
+      width: 60%;
     }
     @include desktop {
       width: 40%;
     }
+  }
+}
+
+.comment-section__form__contemt {
+    width: 100%;
+    align-items: flex-start;
+  @include flex-row;
+  gap: 1rem;
+
+
+  @include tablet
+  {
+    align-items: flex-end;
+  }
+  @include desktop
+  {
+    align-items: flex-end;
   }
 }
