--- a/src/components/CommentList/CommentList.scss
+++ b/src/components/CommentList/CommentList.scss
@@ -52,6 +52,7 @@
     align-items: center;
     justify-content: space-between;
     line-height: 2rem;
+    padding-right: 1.5rem;
   }
 
   &__date {
