--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,8 +4,7 @@
   @include flex-column;
   margin: 0 1rem;
 
-  @include tablet
-  {
+  @include tablet {
     @include flex-row;
     justify-content: space-between;
     align-items: center;
@@ -20,8 +19,7 @@
     @include flex-column;
     width: 100%;
 
-    @include tablet
-    {
+    @include tablet {
       @include flex-row;
       align-items: center;
       justify-content: flex-end;
@@ -40,8 +38,7 @@
     margin: 1.25rem 1rem;
     align-self: center;
 
-    @include tablet
-    {
+    @include tablet {
       margin: 0 1rem;
     }
     @include desktop {
@@ -52,38 +49,27 @@
   &__search--group {
     @include flex-row;
     align-items: center;
-    justify-content: space-between;
     width: 100%;
-
-    @include tablet {
-      width: 60%;
-    }
-
-    @include desktop {
-      width: 60%;
-    }
   }
 
   &__search {
     display: flex;
     border: 0.125rem solid $secondary-mercury;
+    border-radius: 0.25rem;
     font-size: 1rem;
     background-color: $primary-white;
     background-image: url("../../assets/Icons/search.svg");
     background-position: 0.75rem center;
     background-repeat: no-repeat;
-    height: 2.25rem;
-    padding: 0 4rem 0 2.5rem;
-    margin: 1.5rem 1rem 1rem 0;
+    padding: 1rem 3rem;
+    margin: 1rem 0.5rem 1rem 0;
     width: 100%;
 
-    @include tablet
-    {
-      width: auto;
-
+    @include tablet {
+      margin: 1rem;
     }
     @include desktop {
-      width: auto;
+      margin: 1rem;
     }
   }
 
@@ -91,6 +77,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    border: 0.125rem solid $primary-brainflix-blue;
     border-radius: 0.25rem;
     border: none;
     font-size: 16px;
@@ -99,23 +86,20 @@
     background-image: url("../../assets/Icons/upload.svg");
     background-position: 1.75rem center;
     background-repeat: no-repeat;
-    height: 2.25rem;
+    padding: 1rem;
     width: 100%;
     text-transform: uppercase;
     margin: 1rem 0;
 
-    @include tablet{
-      width: 60%;
+    @include tablet {
       margin: 1rem;
     }
     @include desktop {
-      width: 60%;
       margin: 1rem;
     }
   }
 
-  &__upload:hover
-  {
+  &__upload:hover {
     background-color: $secondary-brainflix-blue;
   }
 
@@ -130,7 +114,6 @@
     display: none;
     flex: 0 0 50px;
 
-
     @include tablet {
       display: flex;
     }
@@ -143,8 +126,7 @@
     &-mobile {
       display: flex;
 
-      @include tablet
-      {
+      @include tablet {
         display: none;
       }
       @include desktop {
