--- a/src/components/Video/Video.scss
+++ b/src/components/Video/Video.scss
@@ -1,35 +1,31 @@
 @use "../../styles/index" as *;
 
-.video__player {
+.video {
   display: flex;
-}
 
-.video__media {
-  display: flex;
-  width: 100vw;
-
-  @include tablet
-  {
+  &__media {
     display: flex;
-    width: 80vw;
-   justify-content: center;
+    width: 100vw;
 
+    @include tablet {
+      display: flex;
+      width: 80vw;
+      justify-content: center;
+    }
+
+    @include desktop {
+      display: flex;
+      justify-content: center;
+      width: 50vw;
+    }
   }
 
-  @include desktop
-  {
+  &__container {
     display: flex;
+    width: 100vw;
+    overflow: hidden;
+    max-width: 100%;
     justify-content: center;
-    width: 50vw;
+    background-color: $secondary-brainflix-black;
   }
-
-
-}
-.video__container {
-  display: flex;
-  width: 100vw; 
-  overflow: hidden;
-  max-width: 100%;
-  justify-content: center;
-  background-color: $secondary-brainflix-black;
 }
