--- a/src/components/CommentForm/CommentForm.scss
+++ b/src/components/CommentForm/CommentForm.scss
@@ -55,9 +55,27 @@
       width: 100%;
       height: 100px;
       border: 1px solid $secondary-mercury;
+      background-color:  $secondary-alabaster;
       border-radius: 0.25rem;
       font-size: 1rem;
-     
+      width: 100%;
+
+      &:focus {
+        outline: none;
+        border-color: $primary-brainflix-blue;
+        box-shadow: 0 0 0.25rem $primary-brainflix-blue;
+      }
+  
+      &:hover {
+        border-color: $secondary-brainflix-blue;
+      }
+  
+      &.error {
+        border-color: red;
+        background-color: lighten(red, 40%);
+      }
+  
+
       @include tablet {
         width: 100%;
         height: auto;
