--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -27,6 +27,10 @@
   box-sizing: border-box;
   margin: 0%;
   font-family:  $primary-font;
+  list-style: none;
+  text-decoration: none;
+  color: $primary-brainflix-black ;
+  
 }
 
 body
@@ -40,3 +44,4 @@ h2, h3
 {
     font-weight: 600;
 }
+
