--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -1,33 +1,27 @@
-@use '../../styles/index' as *;
+@use "../../styles/index" as *;
 
-.video-info
-{
-display: flex;
-flex-direction: column;
-justify-content: center;
+.video-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
-
-@include tablet{
+  @include tablet {
     display: flex;
     flex-direction: column;
- 
-}
-@include desktop{
+  }
+  @include desktop {
     display: flex;
     flex-direction: row;
-}
+  }
 
-
-&__data
-{
-    @include desktop{
-        width: 70%;
+  &__data {
+    @include desktop {
+      width: 70%;
     }
-}
-&__next
-{
-    @include desktop{
-        width: 30%;
+  }
+  &__next {
+    @include desktop {
+      width: 30%;
     }
-}
+  }
 }
