no commented out code

--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -9,7 +9,7 @@
 @font-face {
   font-family: "Avenir Next";
   src: url("../../assets/Font/AvenirNextLTPro-Demi.otf");
-  font-weight: 600; // Use a numerical weight for demi-bold
+  font-weight: 600;
 }
 
 @font-face {
